Added text colour to css

--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,11 @@
 }
 
 .header {
+    color: white;
     background-color: aqua;
 }
 
 .body {
+    color: white;
     background-color: blueviolet;
 }
